# CSharpDotNotCPlusPlusWrapperExample

./: CMakeLists.txt  README
csharp/ClassLibrary1/: Class1.cs  ClassLibrary1.csproj  MyKey.snk
csharp/ClassLibrary1/Properties/: AssemblyInfo.cs
include/: Class1Wrapper.h
src/: Class1Exe.cxx  Class1Wrapper.cxx
test/: ClassLibrary1WrapperTest.cxx
